tests/baselines/reference/parserErrorRecovery_SwitchStatement1.errors.txt
==== tests/cases/compiler/parserErrorRecovery_SwitchStatement1.ts (3 errors) ====
    switch (e) {
            ~
!!! parserErrorRecovery_SwitchStatement1.ts(1,9): error TS2095: Cannot find name 'e'.
        case 1:
           1 + 
        case 2:
        ~~~~
!!! parserErrorRecovery_SwitchStatement1.ts(4,5): error TS1109: Expression expected.
           1 + 
        default:
        ~~~~~~~
!!! parserErrorRecovery_SwitchStatement1.ts(6,5): error TS1109: Expression expected.
    }